--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,16 @@
+/* ======================= */
+/* = Bootstrap Overrides = */
+/* ======================= */
+
 /* Space out content a bit */
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  background-color: black;
+}
+
+.row {
+	background-color: white;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
