--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,11 +6,32 @@
 body {
   padding-top: 20px;
   padding-bottom: 20px;
-/*  background-color: black;*/
+  background-image: url('/images/main_bg.jpg');
+	background-repeat: no-repeat;
+	background-color: black;
 }
 
-.row {
-/*	background-color: white;*/
+.hud {
+	font-family: 'Orbitron';
+	font-weight: 500;
+	background-color: black;
+	position: fixed;
+	top: 5%;
+	left: 5%;
+	width: 90%;
+	height: 90%;
+	box-shadow: 0 0 20px 20px black;
+	color: #E5E5E5;
+}
+.viewfinder {
+	background: url('/images/cityscape.jpg');
+	height: 400px;
+	box-shadow: inset 0px 0px 100px 75px black;
+	background-position: center center;
+}
+
+.hud .row {
+	background-color: black;
 }
 
 .row.row-gap-small {
