--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,41 +1,28 @@
-<div class="header">
-	<ul class="nav nav-pills pull-right">
-		<li class="active"><a href="#">Home</a></li>
-		<li><a href="#">Somewhere Else</a></li>
-	</ul>
-	<h3 class="text-muted">Everything is on Fire!!!</h3>
-</div>
+<!-- <div class="header">
+<ul class="nav nav-pills pull-right">
+<li class="active"><a href="#">Home</a></li>
+<li><a href="#">Somewhere Else</a></li>
+</ul>
+<h3 class="text-muted">Everything is on Fire!!!</h3>
+</div> -->
 
-<div class="row top">
-	<div class="col-xs-3">life: </div>
-	<div class="col-xs-3">on fire meter: </div>
-	<div class="col-xs-3">something else: </div>
-	<div class="col-xs-3">superawesomesauce: </div>
-</div>
-
-<div class="row row-gap-medium">	
-	<div class="jumbotron">
-		<div ng-switch="obstacle">
-			<div ng-switch-when="cow">
-				<h1>Missiles headed straight for us!!!</h1>
-				<p><strong>{{timeLeftToAct}} Seconds Until Impact</strong></p>
-			</div>
-			<h1 ng-switch-default>
-				Everything is on Fire!!!
-			</h1>
+<div class="row hud">
+	<div class="col-xs-12">
+		<div class="row top">
+			<div class="col-xs-4">life: </div>
+			<div class="col-xs-4">on fire meter: </div>
+			<div class="col-xs-4">something else: </div>
 		</div>
-		<p>
-			<a class="btn btn-lg" ng-class="{
-				'btn-success': obstacle == null,
-				'btn-danger': obstacle == 'cow'
-			}" href="" ng-click="chargeLasers()" ng-disabled="lasersCharged">
-				<span ng-hide="lasersCharged">Charge Lazorz</span>
-				<span ng-show="lasersCharged">Charging...</span>
-			</a>
-		</p>
-	</div>
-</div>
+		
+		<div class="row">
+			<div class="col-xs-2"></div>
+			<div class="col-xs-8 viewfinder">
+				
+			</div>
+		</div>
 
-<div class="footer">
-	<p>footer</p>
+		<div class="footer">
+			<p>footer</p>
+		</div>
+	</div>
 </div>
