--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -16,6 +16,9 @@ h1, h2, h3, h4 {
 .choose-character {
 	margin-top: 200px;
 }
+.main-game {
+	height: 100%;
+}
 .hud {
 	font-weight: 500;
 	background-color: black;
@@ -32,6 +35,13 @@ h1, h2, h3, h4 {
 	min-height: 400px;
 	box-shadow: inset 0px 0px 100px 75px black;
 	background-position: center center;
+}
+.footer-area {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	text-align: right;
+	width: 100%;
 }
 /* Action/Component buttons in the HUD*/
 .control {
