fixup task list

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -37,7 +37,7 @@
 			</div>
 			<div class="col-xs-8 viewfinder text-center">
 				<div class="row loss-message">
-					<h1 style="color: red" ng-show="lose">You Lose!</h1>					
+					<h1 style="color: red" ng-show="getHealthPercentage() < 0.01">You Lose!</h1>					
 				</div>
 			</div>
 			<div class="col-xs-2">
